--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "commander": "^9.4.1",
     "dotenv": "^16.0.3",
-    "octokit": "^2.0.10"
+    "octokit": "^2.0.10",
+    "prompts": "^2.4.2"
   }
 }
